--- a/src/UI/Info/View/InfoFrame.form
+++ b/src/UI/Info/View/InfoFrame.form
@@ -285,6 +285,22 @@
           <text value="Label"/>
         </properties>
       </component>
+      <component id="848de" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Espécie Plantada:"/>
+        </properties>
+      </component>
+      <component id="a6462" class="javax.swing.JLabel" binding="plantedSpecie">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Label"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
