--- a/src/UI/Stock/View/StockForm.form
+++ b/src/UI/Stock/View/StockForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="stockFormJpanel" default-binding="true" layout-manager="GridLayoutManager" row-count="9" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="597" height="539"/>
+      <xy x="20" y="20" width="642" height="539"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -29,7 +29,7 @@
           <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Add New Fertilizer"/>
+          <text value="Adicionar Fertilizante"/>
         </properties>
       </component>
       <component id="8b1da" class="javax.swing.JTextField" binding="buyValueTextField">
@@ -51,7 +51,7 @@
           <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Buy More"/>
+          <text value="Comprar mais!"/>
         </properties>
       </component>
       <component id="bf630" class="javax.swing.JTextField" binding="validTextField">
@@ -77,7 +77,7 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Fertilizer Name:"/>
+          <text value="Nome do Fertilizante:"/>
         </properties>
       </component>
       <component id="61b06" class="javax.swing.JLabel">
@@ -85,7 +85,7 @@
           <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Select Fertilizer:"/>
+          <text value="Fert. Selecionado:"/>
         </properties>
       </component>
       <component id="afb47" class="javax.swing.JLabel">
@@ -93,7 +93,7 @@
           <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Quantity:"/>
+          <text value="Quantidade:"/>
         </properties>
       </component>
       <component id="60d6b" class="javax.swing.JLabel">
@@ -101,7 +101,7 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Fertilizer Brand:"/>
+          <text value="Marca:"/>
         </properties>
       </component>
       <component id="6ebba" class="javax.swing.JLabel">
@@ -109,7 +109,7 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Valid for how long?"/>
+          <text value="Validade:"/>
         </properties>
       </component>
       <component id="c012b" class="javax.swing.JLabel">
@@ -117,7 +117,7 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Quantity:"/>
+          <text value="Quantidade:"/>
         </properties>
       </component>
       <component id="36a49" class="javax.swing.JTextField" binding="quantityTextField">
